# python-coverage-comment

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  18-annotations.json  26-annotations.json  40-annotations.json  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  run.py
.github/workflows/: pre-commit-action.yaml
codecov/: badge.py  config.py  coverage.py  diff_grouper.py  exceptions.py  github.py  github_client.py  groups.py  log.py  log_utils.py  main.py  settings.py  subprocess.py  template.py
codecov/coverage/: __init__.py  base.py  jest.py  pytest.py
codecov/template_files/: comment.md.j2  macros.md.j2  pr.md.j2  project.md.j2
docs/: annotations.md
tests/: conftest.py  test_badge.py  test_config.py  test_coverage.py  test_diff_grouper.py  test_github.py  test_github_client.py  test_groups.py  test_log.py  test_main.py  test_settings.py  test_template.py
tests/coverage/: test_base.py  test_pytest.py
