[project]
name = "python-coverage-comment"
version = "2.1"
description = "Create a Coverage report comment on Github PR"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
  {name = "Pradeep Tammali", email = "pradeeptammaliwork@gmail.com"},
]
requires-python = ">=3.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.0",
  "Programming Language :: Python :: 3.1",
  "Programming Language :: Python :: 3.2",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "httpx",
  "jinja2",
]
[project.urls]
Homepage = "https://github.com/PradeepTammali/python-coverage-comment"
Issues = "https://github.com/PradeepTammali/python-coverage-comment/issues"
[project.scripts]
codecov = "codecov.main:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
ignore = [
  # format
  'E501', # line too long
]
select = [
  'E', # Errors
  'W', # Warnings
  'F', # Formatting
  'S', # Bandit
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
# Ignore assert usage in tests
'tests/*.py' = ['S101']

[tool.markdownlint]
default = true

[MD007]
indent = 4

[MD013]
# Number of characters
line_length = 120
# Number of characters for headings
heading_line_length = 80
# Number of characters for code blocks
code_block_line_length = 120

[tool.pytest.ini_options]
env = ['APP_ENVIRONMENT = unittest']

[tool.coverage.report]
show_missing = true

[[tool.mypy.overrides]]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
module = 'codecov.*'

[tool.pylint.MASTER]
ignore-paths = ['tests/*']

[tool.pylint.FORMAT]
indent-string = '    '
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    missing-docstring,
    line-too-long,
    import-error,
    fixme,
    no-value-for-parameter,
    too-few-public-methods
'''

[tool.bandit]
exclude_dirs = ["tests/*"]
