[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "python-coverage-comment"
version = "2.1"
description = "Create a Coverage report comment on Github PR"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Pradeep Tammali", email = "pradeeptammaliwork@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx",
  "jinja2",
]
urls.Homepage = "https://github.com/PradeepTammali/python-coverage-comment"
urls.Issues = "https://github.com/PradeepTammali/python-coverage-comment/issues"
scripts.codecov = "codecov.main:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "ipython>=8",
  "mypy>=1.15",
  "pre-commit>=4",
  "pytest>=8.3",
  "pytest-cov>=6",
  "pytest-env>=1.1",
  "ruff>=0.11",
  "twine>=6",
]

[tool.uv]
default-groups = [ "dev" ]

[tool.ruff]
target-version = "py311"

line-length = 120
format.quote-style = "single"
lint.select = [
  "E",   # Errors
  "F",   # Pyflakes
  "G",   # Logging
  "I",   # isort
  "PGH", # No blanket noqa/type ignore
  "S",   # Bandit
  "T10", # Debugger statements
  "UP",  # pyupgrade
  "W",   # Warnings
]
lint.ignore = [
  "E501", # line too long
]
lint.per-file-ignores."tests/*.py" = [ "S101" ]
lint.isort.combine-as-imports = true
lint.mccabe.max-complexity = 10

[tool.pytest.ini_options]
env = [ 'APP_ENVIRONMENT = unittest' ]

[tool.coverage.report]
show_missing = true

[[tool.mypy.overrides]]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
module = 'codecov.*'

[tool.markdownlint]
default = true

[MD007]
indent = 4

[MD013]
line_length = 120
heading_line_length = 80
code_block_line_length = 120
